--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,14 @@
        url('./fonts/Roboto-ThinItalic.ttf') format('truetype')
 }
 
+@font-face {
+  font-family: 'Roboto-Bold';
+  font-style: normal;
+  font-weight: 100;
+  src: local('Roboto-Bold'),
+       url('./fonts/Roboto-Regular.ttf') format('truetype')
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -22,4 +30,8 @@ body {
 
 i {
   font-family: 'Roboto-Italic', sans-serif;
+}
+
+b {
+  font-family: 'Roboto-Bold', sans-serif;
 }
