--- a/src/pages/AccountExplorer/AccountExplorer.css
+++ b/src/pages/AccountExplorer/AccountExplorer.css
@@ -4,4 +4,12 @@
   margin: 20px;
   text-align: center;
   display: inline-block;
+  color: rgb(15,46,83) !important;
+  background-color: rgb(244,176,4) !important;
+  -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding-box;
+  background-clip: padding-box;
 }
