--- a/src/pages/AccountExplorer/AccountExplorer.css
+++ b/src/pages/AccountExplorer/AccountExplorer.css
@@ -1,9 +1,5 @@
-.paper {
-  padding-left: 15px;
-  padding-right: 15px;
+.account {
   margin: 20px;
-  text-align: center;
-  display: inline-block;
   color: rgb(15,46,83) !important;
   background-color: rgb(244,176,4) !important;
   -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
@@ -12,4 +8,12 @@
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding-box;
   background-clip: padding-box;
+}
+
+.balance {
+  font-size: 2rem;
+}
+
+.other-assets {
+  font-size: 1.5rem;
 }
