--- a/src/components/AppBarItems.css
+++ b/src/components/AppBarItems.css
@@ -2,6 +2,14 @@ div.app-bar-items {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  font-size: 15px;
+  /* font-size: 15px; */
   color: rgb(15,46,83);
+}
+div.bar-title-account {
+  line-height: 45px;
+  font-size: 1rem;
+}
+div.bar-subtitle-account {
+  line-height: 0px;
+  font-size: 0.9rem;
 }
