--- a/src/components/AppBarTitle.css
+++ b/src/components/AppBarTitle.css
@@ -3,10 +3,10 @@ div.app-bar-title {
   flex-direction: column;
   color: rgb(15,46,83);
 }
-div.title {
+div.bar-title {
   line-height: 45px;
 }
-div.subtitle {
+div.bar-subtitle {
   line-height: 5px;
   font-size: 15px;
 }
