Add basic account viewer. Enable Ledger login

--- a/src/components/Welcome.css
+++ b/src/components/Welcome.css
@@ -135,6 +135,10 @@
   padding-top: 3rem;
 }
 
+.p-b {
+  padding-bottom: 1rem;
+}
+
 div.flex-centered {
   display: flex;
   flex-direction: column;
