Add derivation path to Ledger login. Add account domain display

--- a/src/components/Balances.css
+++ b/src/components/Balances.css
@@ -15,7 +15,15 @@
 }
 
 .other-assets {
-  font-size: 1.5rem;
+  font-size: 1rem;
+}
+
+.other-asset-balance {
+  padding-right: 5px;
+  font-size: larger;
+}
+.other-asset-code {
+  font-size: smaller;
 }
 
 .faded {
