--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -40,3 +40,8 @@ a.active {
   flex-direction: row;
   justify-content: space-between;
 }
+
+.account-home-domain {
+  font-weight: bolder;
+  font-variant: small-caps;
+}
