Adjust account section title/subtitle style

--- a/src/components/Account.css
+++ b/src/components/Account.css
@@ -1,8 +1,8 @@
-.title {
+.account-title {
   font-size: 1rem;
 }
 
-.subtitle {
+.account-subtitle {
   font-size: 0.8rem !important;
   color: rgba(244,176,4,0.75) !important;
 }
