--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,23 @@ div.flex-start {
   padding: 10px;
 }
 
+.p-l {
+  padding-left: 1rem;
+}
+
+.p-r {
+  padding-right: 1rem;
+}
+
+a {
+  text-decoration: none;
+  color: rgba(255,255,255,0.7);
+}
+
+strong {
+  color: rgb(212,228,188);
+}
+
 /* i {
   font-family: 'Roboto-Italic', sans-serif;
 }
