--- a/src/components/Welcome.css
+++ b/src/components/Welcome.css
@@ -1,3 +1,20 @@
+/* Change Autocomplete styles in Chrome*/
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus
+input:-webkit-autofill, 
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: 1px solid green;
+  -webkit-text-fill-color: rgba(244,176,4,1);
+  -webkit-box-shadow: 0 0 0px 1000px rgb(15,46,83) inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
 .faded-image.cash {
   position: relative;
   overflow: hidden;
