--- a/src/components/Welcome.css
+++ b/src/components/Welcome.css
@@ -9,7 +9,7 @@ textarea:-webkit-autofill:focus,
 select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
-  border: 1px solid green;
+  border: 1px solid rgb(15,46,83);
   -webkit-text-fill-color: rgba(244,176,4,1);
   -webkit-box-shadow: 0 0 0px 1000px rgb(15,46,83) inset;
   transition: background-color 5000s ease-in-out 0s;
