--- a/src/components/Balances.css
+++ b/src/components/Balances.css
@@ -22,6 +22,11 @@
   background-clip: padding-box;
 }
 
+.emphasize {
+  color: rgb(15,46,83);
+  font-size: 1rem;
+}
+
 .bigger-emphasize {
   font-size: 1.4rem;
   color: rgb(15,46,83);
