--- a/src/components/Balances.css
+++ b/src/components/Balances.css
@@ -27,6 +27,11 @@
   font-size: 1rem;
 }
 
+.emphasize-light {
+  color: #bf360c;
+  font-size: 1rem;
+}
+
 .bigger-emphasize {
   font-size: 1.4rem;
   color: rgb(15,46,83);
