--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,14 @@
         url('./fonts/iconfont/MaterialIcons-Regular.ttf') format('truetype');
 }
 
+@font-face {
+    font-family: 'Ledger Font';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Ledger Font'),
+        url('./fonts/ledger/ledger-font.ttf') format('truetype');
+}
+
 .material-icons {
     font-family: 'Material Icons';
     font-weight: normal;
@@ -144,4 +152,9 @@ strong {
     color: #3e2723;
     padding: 5px;
     font-size: 1rem;
+}
+
+.nowrap {
+    white-space: nowrap;
+    overflow: hidden;
 }
