--- a/src/components/Balances.css
+++ b/src/components/Balances.css
@@ -73,3 +73,100 @@
 .modal-title {
   color: rgb(15,46,83) !important;
 }
+
+
+.payment-header {
+  color: rgb(15,46,83);
+  font-size: 1rem;
+}
+
+.payment-currency {
+  font-size: 1.5rem;
+  line-height: 15px;
+}
+
+.payment-card {
+  padding: 0 0.7rem;
+  display: block;
+  position: relative;
+  margin: 20px;
+  color: rgb(15,46,83) !important;
+  background-color: #eceff1 !important;
+  -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding-box;
+  background-clip: padding-box;
+
+  /* border-top:10px double rgba(244,176,4,0.7);
+  border-right:10px double rgba(244,176,4,0.7);
+  border-bottom:10px double rgba(244,176,4,0.7);
+  border-left:10px double rgba(244,176,4,0.7);
+  border-width:10px 10px 10px 10px;
+  border-style:double double double double;
+  border-color:rgba(244,176,4,0.7) rgba(244,176,4,0.7) rgba(244,176,4,0.7) rgba(244,176,4,0.7); */
+}
+.payment-card::after {
+  content: "";
+  /* background: url('/img/sf.svg'); */
+  background: linear-gradient(63deg, #999 23%, transparent 23%) 7px 0, 
+    linear-gradient(63deg, transparent 74%, #999 78%), 
+    linear-gradient(63deg, transparent 34%, #999 38%, #999 58%, transparent 62%), 
+    #444;
+  background-size: 4px 10px;
+
+  opacity: 0.12;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+  border-radius: 3px;
+}
+
+.leading-label-align {
+  padding-top: 42px;
+  padding-bottom: 50px;
+}
+
+.verbatim-underlined {
+  font-size: 1rem;
+  border-bottom: 1px solid rgba(15,46,83,0.5);
+}
+
+.f-e {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.f-s {
+  display: flex;
+  flex-direction: row;
+  align-content: flex-end;
+}
+
+.space-between {
+  justify-content: space-between;
+}
+
+.ledger-nano-s {
+  color: #1b5e20;
+  display: block;
+  font-family: "Ledger Font";
+  font-size: 3.5rem;
+  transform: rotate(90deg);
+  transform-origin: 17px 21px;
+}
+
+.ledger-nano-s::before {
+	content: "\e900";
+}
+
+.micro {
+  font-size: 11px;
+  color: rgba(15,46,83,0.7);
+}
