--- a/src/components/Layout/AppBarTitle.css
+++ b/src/components/Layout/AppBarTitle.css
@@ -3,13 +3,23 @@ div.app-bar-title {
     flex-direction: column;
     color: rgb(15,46,83);
 }
+
 div.bar-title {
     line-height: 45px;
 }
+
 div.bar-subtitle {
     line-height: 5px;
     font-size: 15px;
 }
+
 div.bar-subtitle-account {
     text-align: end;
+}
+
+div.badge {
+    background-color: rgba(15,46,83,0.9);
+    color: rgb(244,176,4);
+    padding: 3px 5px 3px 5px;
+    border-radius: 3px;
 }
