Improve text registration text content. Make balance card fiat style

--- a/src/components/Balances.css
+++ b/src/components/Balances.css
@@ -206,3 +206,15 @@
 .header-icon > i {
   font-size: 2rem !important;
 }
+
+.small-icon > i {
+  font-size: 1rem !important;
+}
+
+.currency-glyph {
+  font-size: 1.5rem;
+}
+
+.currency-iso {
+  font-size: 0.75rem;
+}
