--- a/src/components/Welcome/index.css
+++ b/src/components/Welcome/index.css
@@ -122,3 +122,17 @@
 .welcome-content {
     padding-bottom: 40px;
 }
+
+.navy {
+    color: rgb(15,46,83);
+    font-size: 1.2rem;
+}
+
+.alert-message {
+    padding: 5px;
+    font-size: 1.3rem;
+    font-variant: small-caps;
+    background: rgba(244,176,4,1);
+    color: rgb(15,46,83);
+    font-weight: 600;
+}
