--- a/src/components/Welcome/index.css
+++ b/src/components/Welcome/index.css
@@ -134,9 +134,8 @@
 
 .alert-message {
     padding: 5px;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     font-variant: small-caps;
-    background: rgba(244,176,4,1);
-    color: rgb(15,46,83);
-    font-weight: 600;
+    background: rgba(178,34,34,0.8);
+    color: rgba(244,176,4,1);
 }
