<Welcome>: vertical <Panel>'s stretch.

--- a/src/components/Payments/index.css
+++ b/src/components/Payments/index.css
@@ -15,10 +15,10 @@ div.flex-row-column {
     margin: 0px 5px 0px 5px;
 }
 
-div.flex-row-column-50 {
+/* div.flex-row-column-50 {
     width: 50%;
     margin: 0px 5px 0px 5px;
-}
+} */
 
 div.payment-item {
     margin: 5px 0px;
