--- a/src/components/Balances/index.css
+++ b/src/components/Balances/index.css
@@ -193,9 +193,16 @@
 }
 
 .bg-green {
-    background: rgba(34,139,34,0.55);
-    padding: 3px 5px 3px 5px;
+    display: inline-block;
+    background-color: rgba(34,139,34,0.55);
+    color: rgba(255, 255, 255, 0.75);
+    font-size: 0.8rem;
+    line-height: 1rem;
+    padding: 2px 6px;
+    box-shadow: 2px 2px rgba(0,0,0,0.3);
     border-radius: 3px;
+    font-weight: bold;
+    margin: 5px 10px;
 }
 
 .fade {
