--- a/src/index.css
+++ b/src/index.css
@@ -171,3 +171,17 @@ strong {
     color: rgba(244,176,4,1);
     text-align: center;
 }
+
+span.red-badge {
+    display: inline-block;
+    font-size: 0.7rem;
+    line-height: 1rem;
+    vertical-align: 0.1rem;
+    background-color: rgba(178,34,34,0.8);
+    color: rgba(244,176,4,1);
+    padding: 2px 6px;
+    border-radius: 3px;
+    box-shadow: 2px 2px rgba(0,0,0,0.3);
+
+    font-weight: bold;
+}
