--- a/src/index.css
+++ b/src/index.css
@@ -182,6 +182,6 @@ span.red-badge {
     padding: 2px 6px;
     border-radius: 3px;
     box-shadow: 2px 2px rgba(0,0,0,0.3);
-
+    margin-top: 10px;
     font-weight: bold;
 }
