--- a/src/components/Balances/index.css
+++ b/src/components/Balances/index.css
@@ -206,7 +206,12 @@
     font-size: 0.8rem;
     line-height: 1rem;
     padding: 2px 6px;
-    box-shadow: 2px 2px rgba(0,0,0,0.3);
+    -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.4);
+    -webkit-background-clip: padding-box;
+    -moz-background-clip: padding-box;
+    background-clip: padding-box;
     border-radius: 3px;
     font-weight: bold;
     margin: 5px 10px;
