--- a/src/components/LedgerAuthenticator/index.css
+++ b/src/components/LedgerAuthenticator/index.css
@@ -8,3 +8,9 @@
     background-color: rgb(15,46,83);
     color: rgb(244,176,4);
 }
+
+.bordered {
+    border: 1px solid rgb(15,46,83);
+    border-radius: 3px;
+    padding: 1rem;
+}
