<TxConfirmMsg>: Prettify content

--- a/src/components/Balances/index.css
+++ b/src/components/Balances/index.css
@@ -175,6 +175,10 @@
     justify-content: space-between;
 }
 
+.space-around {
+    justify-content: space-around;
+}
+
 .center {
     justify-content: center;
 }
