--- a/src/components/Balances/index.css
+++ b/src/components/Balances/index.css
@@ -252,7 +252,7 @@
 }
 
 .bigger {
-    font-size: 1.3rem;
+    font-size: 1.3rem !important;
 }
 
 .header-icon > span {
@@ -273,4 +273,13 @@
 
 .currency-iso {
     font-size: 0.75rem;
+}
+
+.table-row-primary {
+    border-bottom: 1px solid rgba(15,46,83,0.3) !important;
+}
+
+.table-row-primary:last-child {
+    border-bottom: none !important;
+    border-top: none !important;
 }
